# eDOCr

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
Results/: drawing_0_dimensions.csv  drawing_0_gdts.csv  drawing_0_tables.csv
eDOCr/: ocr_it.py
eDOCr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
eDOCr/keras_ocr/: __init__.py  data_generation.py  datasets.py  detection.py  recognition.py
eDOCr/keras_ocr_models/: __init__.py  train_recognizer.py
eDOCr/keras_ocr_models/models/: recognizer_dimensions.csv  recognizer_dimensions_.csv  recognizer_gdts.csv  recognizer_infoblock.csv
eDOCr/tools/: __init__.py  box_tree.py  cluster.py  img_process.py  output.py  pipeline_dimensions.py  pipeline_gdts.py  pipeline_infoblock.py  tolerances.py  watermark.py
eDOCr_javvi51.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: convert_pdf.py  test_drawing.py  train.py
tests/test_Results/: Adapterplatte_dimensions.csv  Adapterplatte_gdts.csv  Adapterplatte_tables.csv  BM_partdimensions.csv  BM_parttables.csv  Candle_holder_0_gdts.csv  Candle_holder_0_tables.csv  Candle_holder_dimensions.csv  Gripper_dimensions.csv  Gripper_gdts.csv  Gripper_tables.csv  Halter_dimensions.csv  Halter_gdts.csv  Halter_tables.csv  LIU0010_0_dimensions.csv  LIU0010_0_tables.csv  LIU0010_dimensions.csv
