[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eDOCr"
version = "0.0.1"
authors = [
  { name="Javier Villena Toro" },
]
description = "OCR for Engineering Mechanical Drawings"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/javvi51/eDOCr"
"Bug Tracker" = "https://github.com/javvi51/eDOCr/issues"

[tool.setuptools.package-data]
mypkg = ["*.h5"]